--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "valentijn-app",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "chmod +x node_modules/.bin/vite && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
